# Haskell-First-Principles-Book

./: .gitignore
TestCode/: #Cipher.hs#  Tree.hs
chapter11/: section11.6.hs
chapter13/: test.hs
chapter13/cipher/: cipher.cabal
chapter13/cipher/src/: Cipher.hs  Main.hs
chapter13/hangman/: hangman.cabal
chapter13/hangman/src/: Main.hs
chapter14/cipher/: cipher.cabal
chapter14/cipher/src/: Cipher.hs  Main.hs
chapter14/cipher/tests/: tests.hs
chapter15/: Optional.hs
chapter16/: functorExercises.hs
chapter18/: EitherMonad.hs  chapterExercises.hs  test.hs
