name:                cipher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cipher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Cipher
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , containers
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

executable cipher
  hs-source-dirs:      src
  other-modules:       Cipher
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , cipher
                     , QuickCheck

test-suite tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            test.hs
  hs-source-dirs:     tests
  build-depends:      base
                    , containers
                    , cipher
                    , QuickCheck
  default-language:   Haskell2010